# http-fields

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: review-findings.md
.claude/design/: header-model.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: conf.py  index.md
docs/design/: header-model.md
docs/explanation/: design.md
docs/how-to/: custom-and-unknown-headers.md  parse-and-build-headers.md  structured-fields.md
docs/reference/: api.md  headers.md  structured-fields.md
docs/tutorials/: getting-started.md
src/http_fields/: __init__.py  accept.py  acceptcharset.py  acceptencoding.py  acceptlanguage.py  acceptranges.py  accesscontrol.py  age.py  allow.py  altsvc.py  authbases.py  authenticationinfo.py  authorization.py  cachecontrol.py  cachestatus.py  connection.py  contentdigest.py  contentdisposition.py  contentencoding.py  contentlanguage.py  contentlength.py  contentlocation.py  contentrange.py  contenttype.py  cookie.py  date.py  dateheader.py  entitytaglist.py  etag.py  expect.py  expires.py  forwarded.py  fromheader.py  header.py  host.py  ifmatch.py  ifmodifiedsince.py  ifnonematch.py  ifrange.py  ifunmodifiedsince.py  (+28 more)
src/http_fields/visitors/: rfc3986.py  rfc6265.py  rfc6266.py  rfc7230.py  rfc7239.py  rfc7240.py  rfc7838.py  rfc8288.py  rfc9111.py
src/http_fields/visitors/rfc9110/: __init__.py  _base.py  accept.py  acceptcharset.py  acceptencoding.py  acceptlanguage.py  acceptranges.py  allow.py  authenticationinfo.py  authorization.py  authparam.py  authscheme.py  challenge.py  comment.py  connection.py  contentlanguage.py  contentlength.py  contentrange.py  contenttype.py  date.py  etag.py  field.py  host.py  ifmatch.py  ifmodifiedsince.py  ifnonematch.py  ifunmodifiedsince.py  lastmodified.py  location.py  parameters.py  product.py  quotedstring.py  range.py  rangeunit.py  retryafter.py  server.py  te.py  token.py  token68.py  type.py  (+5 more)
src/http_headers/: __init__.py  accept.py  acceptcharset.py  acceptencoding.py  acceptlanguage.py  acceptranges.py  accesscontrol.py  age.py  allow.py  altsvc.py  authbases.py  authenticationinfo.py  authorization.py  cachecontrol.py  cachestatus.py  connection.py  contentdigest.py  contentdisposition.py  contentencoding.py  contentlanguage.py  contentlength.py  contentlocation.py  contentrange.py  contenttype.py  cookie.py  date.py  dateheader.py  entitytaglist.py  etag.py  expect.py  expires.py  forwarded.py  fromheader.py  header.py  host.py  ifmatch.py  ifmodifiedsince.py  ifnonematch.py  ifrange.py  ifunmodifiedsince.py  (+29 more)
src/http_headers/visitors/: rfc6265.py  rfc6266.py  rfc7230.py  rfc7239.py  rfc7240.py  rfc7838.py  rfc8288.py  rfc9111.py
src/http_headers/visitors/rfc9110/: __init__.py  _base.py  accept.py  acceptcharset.py  acceptencoding.py  acceptlanguage.py  acceptranges.py  allow.py  authenticationinfo.py  authorization.py  authparam.py  authscheme.py  challenge.py  comment.py  connection.py  contentlanguage.py  contentlength.py  contentrange.py  contenttype.py  date.py  entitytag.py  etag.py  field.py  host.py  httpdate.py  ifmatch.py  ifmodifiedsince.py  ifnonematch.py  ifunmodifiedsince.py  lastmodified.py  parameters.py  product.py  quotedstring.py  range.py  rangeunit.py  retryafter.py  server.py  te.py  token.py  token68.py  (+6 more)
tests/: test_accept.py  test_acceptcharset.py  test_acceptencoding.py  test_acceptlanguage.py  test_acceptranges.py  test_accesscontrol.py  test_age.py  test_allow.py  test_altsvc.py  test_authenticationinfo.py  test_authorization.py  test_cachecontrol.py  test_cachestatus.py  test_connection.py  test_contentdigest.py  test_contentdisposition.py  test_contentencoding.py  test_contentlanguage.py  test_contentlength.py  test_contentlocation.py  test_contentrange.py  test_contenttype.py  test_cookie.py  test_date.py  test_etag.py  test_expect.py  test_expires.py  test_forwarded.py  test_from.py  test_header.py  test_host.py  test_ifmatch.py  test_ifmodifiedsince.py  test_ifnonematch.py  test_ifrange.py  test_ifunmodifiedsince.py  test_injection.py  test_lastmodified.py  test_limits.py  test_link.py  (+24 more)
tests/visitors/: test_entitytag.py  test_misc.py  test_rfc3986.py  test_rfc6265.py  test_rfc6266.py  test_rfc7230.py  test_rfc9111.py
tests/visitors/rfc9110/: test_accept.py  test_acceptcharset.py  test_acceptencoding.py  test_acceptlanguage.py  test_authenticationinfo.py  test_authorization.py  test_authparam.py  test_authscheme.py  test_base.py  test_challenge.py  test_comment.py  test_connection.py  test_contentlength.py  test_contentrange.py  test_etag.py  test_host.py  test_httpdate.py  test_ifmatch.py  test_ifnonematch.py  test_parameters.py  test_product.py  test_quotedstring.py  test_token.py  test_token68.py  test_useragent.py  test_weight.py
