[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "http-fields"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Charles Yeomans", email = "charles@declaresub.com" },
]
keywords = ["http", "headers", "abnf", "parser", "generator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "abnf>=2.6.0",
    "typing_extensions>=4.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/declaresub/http-fields"
Documentation = "https://http-fields.readthedocs.io/"
Repository = "https://github.com/declaresub/http-fields"
Changelog = "https://github.com/declaresub/http-fields/blob/master/CHANGELOG.md"
Issues = "https://github.com/declaresub/http-fields/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "basedpyright",
    "ruff",
]
docs = [
    "sphinx>=8",
    "myst-parser>=4",
    "furo",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/http_fields"]

# Be explicit about the sdist contents. Without this, hatchling walks the working tree and a
# stray directory (e.g. an accidentally-created virtualenv) is pulled in and breaks the build.
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE.txt",
    "/SECURITY.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# The formatter owns code line length (88 cols); E501 only fires on strings,
# comments, and docstrings it can't split, so it's disabled per Ruff guidance.
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "strict"
# abnf's NodeVisitor.visit is typed `-> Any` (its return is dispatched at runtime by
# node name, so Any is the honest ceiling). basedpyright's reportUnknown* family flags
# every Any that flows from visit() through the visitors; disable that family rather than
# cast at ~46 call sites. Any improvement to visit's signature belongs upstream in abnf.
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false

# Test functions don't annotate their pytest parametrize/fixture parameters; keep the
# missing-annotation check for src only.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportMissingParameterType = false
